# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
ghostpost/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  serializers.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200820_1515.py  0003_post_score.py
static/css/: index.css
templates/: index.html
